Fix: like button dark mode

--- a/src/components/NFTCard/NFTCard.module.css
+++ b/src/components/NFTCard/NFTCard.module.css
@@ -51,7 +51,6 @@
     width: 12px;
     margin-right: 3px;
     margin-top: 2px;
-    filter: var(--invert);
 }
 
 .likeButton {
